--- a/flutter_application_2/pubspec.yaml
+++ b/flutter_application_2/pubspec.yaml
@@ -9,8 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_background_service: ^3.0.1
-  flutter_vlc_player: '7.2.0'
+  flutter_background_service: ^4.0.0
+  flutter_vlc_player: ^7.2.0
   flutter_local_notifications: ^15.1.0+1
 
 dev_dependencies:
